[package]
name    = "pn532"
version = "0.1.0"
authors = ["Arvid E. Picciani <aep@exys.org>"]
edition = "2018"
description = "nfc reader pn532"
license = "MIT"
repository = "https://github.com/aep/pn532"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev              = "0.4.2"

